--- a/products-trade/less/products-page/pages/_product-detail-main.less
+++ b/products-trade/less/products-page/pages/_product-detail-main.less
@@ -954,7 +954,8 @@
 		.clearfix();
 		margin-bottom: 38px;
 		@media (min-width: @screen-lg){
-			padding-left: 11%;
+			//padding-left: 11%;
+			padding: 0 4%;
 		}
 		li{
 			list-style:none;
